--- a/postApp/templates/crud/add-post.html
+++ b/postApp/templates/crud/add-post.html
@@ -1,5 +1,5 @@
 {% extends '../base.html' %}
-{% block title %}Add post{% endblock %}
+{% block title %}Добавить пост{% endblock %}
 
 
 {% block content %}
@@ -13,12 +13,13 @@
         border: 1px solid #000;
     }
 </style>
+
     <div class="container">
         <form method="post">
-            <h1 class="title mt-5 mb-5">Add post</h1>
+            <h1 class="title mt-5 mb-5">Добавить место</h1>
             {% csrf_token %}
             {{ form }}
-            <button class="mt-5 button is-info">Add</button>
+            <button class="mt-5 button is-info">Добавить пост</button>
         </form>
     </div>
 {% endblock %}
