--- a/postApp/templates/crud/edit-post.html
+++ b/postApp/templates/crud/edit-post.html
@@ -1,6 +1,6 @@
 {% extends '../base.html' %}
 
-{% block title %}Edit post{% endblock %}
+{% block title %}Изменить пост{% endblock %}
 
 
 {% block content %}
@@ -16,7 +16,7 @@
 </style>
     <div class="container">
         <form method="post">
-            <h1 class="title mt-5 mb-5">Edit post</h1>
+            <h1 class="title mt-5 mb-5">Изменить пост</h1>
             {% csrf_token %}
             <label for="id_title">Title:</label>
             <input value="{{ post.title }}" type="text" name="title" maxlength="255" required="" id="id_title">
@@ -32,7 +32,7 @@
                 {{ post.content }}
             </textarea>
 
-            <button class="mt-5 button is-info">Edit</button>
+            <button class="mt-5 button is-info">Изменить</button>
         </form>
     </div>
 {% endblock %}
